2005-05-25  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am: Add new files. 

	* gdk-pixbuf.symbols: Add new api.

	* gdk-pixbuf.h: Include gdk-pixbuf-simple-anim.h here.

	* gdk-pixbuf-simple-anim.[hc]: Add a way to construct
	simple animations out of pixbufs.  (#135161, Dom Lachowicz)

2005-05-24  Sven Neumann  <sven@gimp.org>

	* io-png.c: allow to specify the PNG compression level by passing
	a "compression" parameter to the PNG save function (bug #305337).

	* gdk-pixbuf-io.c (gdk_pixbuf_save): document the new parameter.

2005-04-09  Matthias Clasen  <mclasen@redhat.com>
	
	* Makefile.am: Use $(NM), not nm directly. (#301299, 
	Nguyen Thai Ngoc Duy)

	* io-bmp.c (gdk_pixbuf__bmp_image_save_to_callback): 
	Don't overflow the stack.  (Jakub Jelinek, Arjan van de Ven)

2005-04-08  Matthias Clasen  <mclasen@redhat.com>

	* io-pcx.c: No debugging output, please. (#173107,
	John Ellis)

2005-04-07  Matthias Clasen  <mclasen@redhat.com>

	* io-bmp.c (DecodeColormap): Initialize the colormap to 
	zero.  (#171762, David Costanzo)

2005-03-30  Matthias Clasen  <mclasen@redhat.com>

	* io-bmp.c: Avoid bus errors due to unaligned access. (#168173,
	Morten Welinder, Ivan Wong)

2005-03-29  Matthias Clasen  <mclasen@redhat.com>

	* io-tga.c (parse_rle_data): Fix the update areas for incremental
	loading of compressed tgas.  (#171883, David Costanzo)

2005-03-27  Matthias Clasen  <mclasen@redhat.com>

	* io-bmp.c (DoCompressed): Use the correct update regions for
	compressed bmps.  (#150664, Owen Taylor, test images provided
	by David Costanzo)

Sun Mar 27 19:59:52 2005  Manish Singh  <yosh@gimp.org>

	* io-bmp.c (grow_buffer): reject 0-sized buffers as corrupt header
	data. Fixes bug #171707.

2005-03-25  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-data.c (gdk_pixbuf_new_from_data): Use canonical
	property names.

2005-03-21  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf.c (gdk_pixbuf_class_init): Mark param spec strings
	as static.
