@@ -127,7 +127,6 @@ gdk_pixbuf_non_anim_new
 gdk_pixbuf_simple_anim_get_type G_GNUC_CONST
 gdk_pixbuf_simple_anim_new
 gdk_pixbuf_simple_anim_add_frame
-gdk_pixbuf_simple_anim_iter_get_type G_GNUC_CONST
 #endif
 #endif
 
